// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStepNumber is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiStepNumber testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiScreenReaderOnly"
  >
    Step 
  </span>
  <span
    aria-hidden="true"
    class="euiStepNumber__number"
  />
</span>
`;

exports[`EuiStepNumber props has titleSize is rendered 1`] = `
<span
  class="euiStepNumber"
>
  <span
    class="euiScreenReaderOnly"
  >
    Step 1
  </span>
  <span
    aria-hidden="true"
    class="euiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`EuiStepNumber props isHollow is rendered 1`] = `
<span
  class="euiStepNumber euiStepNumber-isHollow"
>
  <span
    class="euiScreenReaderOnly"
  >
    Step 1
  </span>
  <span
    aria-hidden="true"
    class="euiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`EuiStepNumber props status complete is rendered 1`] = `
<span
  class="euiStepNumber euiStepNumber--complete"
>
  <span
    aria-label="Step 1 is complete"
    class="euiStepNumber__icon"
    data-euiicon-type="check"
  />
</span>
`;

exports[`EuiStepNumber props status current is rendered 1`] = `
<span
  class="euiStepNumber"
>
  <span
    class="euiScreenReaderOnly"
  >
    Current step is 1
  </span>
  <span
    aria-hidden="true"
    class="euiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`EuiStepNumber props status danger is rendered 1`] = `
<span
  class="euiStepNumber euiStepNumber--danger"
>
  <span
    aria-label="Step 1 has errors"
    class="euiStepNumber__icon"
    data-euiicon-type="cross"
  />
</span>
`;

exports[`EuiStepNumber props status disabled is rendered 1`] = `
<span
  class="euiStepNumber euiStepNumber--disabled"
>
  <span
    class="euiScreenReaderOnly"
  >
    Step 1 is disabled
  </span>
  <span
    aria-hidden="true"
    class="euiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`EuiStepNumber props status incomplete is rendered 1`] = `
<span
  class="euiStepNumber euiStepNumber--incomplete"
>
  <span
    class="euiScreenReaderOnly"
  >
    Step 1 is incomplete
  </span>
  <span
    aria-hidden="true"
    class="euiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`EuiStepNumber props status loading is rendered 1`] = `
<span
  class="euiStepNumber euiStepNumber--loading"
>
  <span
    class="euiScreenReaderOnly"
  >
    Step 1 is loading
  </span>
  <span
    class="euiLoadingSpinner euiLoadingSpinner--xLarge euiStepNumber__loader"
  />
</span>
`;

exports[`EuiStepNumber props status warning is rendered 1`] = `
<span
  class="euiStepNumber euiStepNumber--warning"
>
  <span
    aria-label="Step 1 has warnings"
    class="euiStepNumber__icon"
    data-euiicon-type="alert"
  />
</span>
`;
